<resources>
    <string name="app_name">My App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>

    <string name="action_main_screen">Main screen</string>


    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_customers">Customers</string>
    <string name="menu_devices">Devices</string>
    <string name="menu_IOM">IOM</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_signout">Signout</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_registration">Registration</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
