<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view"

>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/dashboard_layout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_dashboard"/>



        <item
                android:id="@+id/customer_layout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_customers"/>

        <item
                android:id="@+id/devices_layout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_devices"/>



        <item
                android:id="@+id/video_layout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_videos"/>

   <!--     <item
                android:id="@+id/login_layout"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_login"/>-->


        <item
                android:id="@+id/home_layout"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_home"/>

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/menu_share"/>
            <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/menu_send"/>
        </menu>
    </item>

</menu>
